#
# Copyright (C) The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.18)

# build native_app_glue as a static lib
set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS}")
add_library(native_app_glue STATIC
    ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)

# now build app's shared lib
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wno-address-of-packed-member -Wno-unused-variable -Wno-unused-function -Wno-unused-label")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Werror")

# Export ANativeActivity_onCreate(),
# Refer to: https://github.com/android-ndk/ndk/issues/381.
set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -u ANativeActivity_onCreate")

set(LIB42 "../../../../../../../library")
set(libboot0
${LIB42}/libboot0/app/ndk_appglue/entry.c
${LIB42}/libboot0/app/ndk_appglue/helpenv.c
${LIB42}/libboot0/app/ndk_appglue/helpuart.c
${LIB42}/libboot0/app/memory.c
${LIB42}/libboot0/app/initer.c
${LIB42}/libboot0/origin.c
)
set(libboot1
${LIB42}/libboot1/data/bignode.c
${LIB42}/libboot1/data/bignode_self.c
${LIB42}/libboot1/data/rel.c
${LIB42}/libboot1/data/rel_0jump.c
${LIB42}/libboot1/data/rel_1jump.c
${LIB42}/libboot1/data/rel_2jump.c
${LIB42}/libboot1/data/rel_3jump.c
${LIB42}/libboot1/data/linklist.c
${LIB42}/libboot1/data/rbtree.c
${LIB42}/libboot1/inout/in.ev.c
${LIB42}/libboot1/inout/in.str.c
${LIB42}/libboot1/inout/out.str.c
${LIB42}/libboot1/inout/out.trace.c
${LIB42}/libboot1/loop/loop.exiter.c
${LIB42}/libboot1/loop/loop.poller.c
${LIB42}/libboot1/loop/loop.pulser.c
${LIB42}/libboot1/loop/loop.waiter.c
${LIB42}/libboot1/setup/setup.compiler.c
${LIB42}/libboot1/setup/setup.guiapp.c
${LIB42}/libboot1/setup/setup.kernel.c
${LIB42}/libboot1/setup/setup.myml.c
${LIB42}/libboot1/setup/setup.mython.c
${LIB42}/libboot1/setup/setup.subcmd.c
${LIB42}/libboot1/setup/setup.term.c
${LIB42}/libboot1/bootup.c
)
if(ANDROID_ABI STREQUAL armeabi-v7a)
set(libhard0
${LIB42}/libhard0/oscore/toarm/cpu32/arm.fp.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.bt.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.gpio.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.i2c.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.pci.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.spi.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.usb.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.wifi.c
${LIB42}/libhard0/appcore/inlinux/hardware.c
${LIB42}/libhard0/device.c
)
elseif(ANDROID_ABI STREQUAL arm64-v8a)
set(libhard0
${LIB42}/libhard0/oscore/toarm/cpu32/arm.fp.c	#todo: cpu64/arm64.fp.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.bt.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.gpio.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.i2c.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.pci.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.spi.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.usb.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.wifi.c
${LIB42}/libhard0/appcore/inlinux/hardware.c
${LIB42}/libhard0/device.c
)
elseif(ANDROID_ABI STREQUAL x86)
set(libhard0
${LIB42}/libhard0/oscore/tox86/cpu32/x86.fp.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.bt.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.gpio.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.i2c.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.pci.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.spi.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.usb.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.wifi.c
${LIB42}/libhard0/appcore/inlinux/hardware.c
${LIB42}/libhard0/device.c
)
elseif(ANDROID_ABI STREQUAL x86_64)
set(libhard0
${LIB42}/libhard0/oscore/tox86/cpu64/x64.fp.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.bt.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.gpio.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.i2c.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.pci.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.spi.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.usb.c
${LIB42}/libhard0/appcore/inlinux/linux.wire.wifi.c
${LIB42}/libhard0/appcore/inlinux/hardware.c
${LIB42}/libhard0/device.c
)
endif()
set(libhard1
${LIB42}/libhard1/map/acpi/devmap.acpi.c
${LIB42}/libhard1/map/dts/devmap.dts.c
${LIB42}/libhard1/map/bios/memmap.bios.c
${LIB42}/libhard1/map/uefi/memmap.uefi.c
${LIB42}/libhard1/sensor/baro/baro.ms5611.c
${LIB42}/libhard1/sensor/gyro/gyro.l3gd20.c
${LIB42}/libhard1/sensor/pack/g_a_b.icm20789.c
${LIB42}/libhard1/sensor/pack/g_a_m.lsm9ds1.c
${LIB42}/libhard1/sensor/pack/g_a_m.mpu9250.c
${LIB42}/libhard1/usb/usbhost.c
${LIB42}/libhard1/usb/usbperi.c
${LIB42}/libhard1/usb/perdev/usbhub-driver.c
${LIB42}/libhard1/usb/perdev/usbds4-driver.c
${LIB42}/libhard1/usb/perdev/usbxbox-driver.c
${LIB42}/libhard1/usb/perdev/usbvmware-driver.c
${LIB42}/libhard1/usb/perfunc/usbhid-driver.c
${LIB42}/libhard1/usb/perfunc/usbstor-driver.c
${LIB42}/libhard1/driver.c
)
set(libsoft0
${LIB42}/libsoft0/androidapp/android.memory.file.c
${LIB42}/libsoft0/linuxapp/linux.flow.epoll.c
${LIB42}/libsoft0/linuxapp/linux.flow.socket.c
${LIB42}/libsoft0/linuxapp/linux.flow.ptmx.c
${LIB42}/libsoft0/linuxapp/linux.flow.tty.c
${LIB42}/libsoft0/linuxapp/linux.memory.folder.c
${LIB42}/libsoft0/linuxapp/linux.multitask.process.c
${LIB42}/libsoft0/linuxapp/linux.multitask.thread.c
${LIB42}/libsoft0/linuxapp/linux.system.random.c
${LIB42}/libsoft0/linuxapp/linux.system.signal.c
${LIB42}/libsoft0/linuxapp/linux.system.time.c
${LIB42}/libsoft0/system.c
)
set(libsoft1
${LIB42}/libsoft1/libalgo/liblang/assembly/asm.x64.c
${LIB42}/libsoft1/libalgo/liblang/assembly/asm.arm.c
${LIB42}/libsoft1/libalgo/liblang/program/prog.purec.c
${LIB42}/libsoft1/libalgo/liblang/program/prog.cpp.c
${LIB42}/libsoft1/libalgo/liblang/lang.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.arg.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.ascii.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.bigint.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.file.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.num.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.print.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.url.c
${LIB42}/libsoft1/libalgo/libstr/conv/conv.utf8.c
${LIB42}/libsoft1/libalgo/libstr/count/count.item.c
${LIB42}/libsoft1/libalgo/libstr/count/count.line.c
${LIB42}/libsoft1/libalgo/libstr/diff/diff.cmp.c
${LIB42}/libsoft1/libalgo/libstr/diff/diff.wild.c
${LIB42}/libsoft1/libalgo/libstr/move/move.copy.c
${LIB42}/libsoft1/libalgo/libstr/move/move.swap.c
${LIB42}/libsoft1/libalgo/crypt/crypt.aes.c
${LIB42}/libsoft1/libalgo/crypt/crypt.des.c
${LIB42}/libsoft1/libalgo/crypt/crypt.rsa.c
${LIB42}/libsoft1/libalgo/encdec/encdec.base64.c
${LIB42}/libsoft1/libalgo/encdec/encdec.qrcode.c
${LIB42}/libsoft1/libalgo/graph/graph.forcedirected.c
${LIB42}/libsoft1/libalgo/graph/graph.kruskal.c
${LIB42}/libsoft1/libalgo/graph/graph.prim.c
${LIB42}/libsoft1/libalgo/hash/hash.crc8.c
${LIB42}/libsoft1/libalgo/hash/hash.crc16.c
${LIB42}/libsoft1/libalgo/hash/hash.crc32.c
${LIB42}/libsoft1/libalgo/hash/hash.md5.c
${LIB42}/libsoft1/libalgo/hash/hash.sha1.c
${LIB42}/libsoft1/libalgo/hash/hash.sha256.c
${LIB42}/libsoft1/libalgo/hash/hash.sha512.c
${LIB42}/libsoft1/libalgo/hash/hash.string.c
${LIB42}/libsoft1/libalgo/keyexch/keyexch.dh.c
${LIB42}/libsoft1/libalgo/keyexch/keyexch.x25519.c
${LIB42}/libsoft1/libalgo/linear/linear.disjoint.c
${LIB42}/libsoft1/libalgo/linear/linear.memory.c
${LIB42}/libsoft1/libalgo/linear/linear.queue.c
${LIB42}/libsoft1/libalgo/linear/linear.stack.c
${LIB42}/libsoft1/libalgo/matching/match.bm.c
${LIB42}/libsoft1/libalgo/matching/match.kmp.c
${LIB42}/libsoft1/libalgo/matching/match.rough.c
${LIB42}/libsoft1/libalgo/neural/neural.ann.c
${LIB42}/libsoft1/libalgo/neural/neural.cnn.c
${LIB42}/libsoft1/libalgo/neural/neural.rnn.c
${LIB42}/libsoft1/libalgo/notation/nota.calc.c
${LIB42}/libsoft1/libalgo/notation/nota.postfix.c
${LIB42}/libsoft1/libalgo/notation/nota.prefix.c
${LIB42}/libsoft1/libalgo/solve/solve.2048.c
${LIB42}/libsoft1/libalgo/solve/solve.chess.c
${LIB42}/libsoft1/libalgo/solve/solve.maze.c
${LIB42}/libsoft1/libalgo/solve/solve.pcbwire.c
${LIB42}/libsoft1/libalgo/solve/solve.rubik.c
${LIB42}/libsoft1/libalgo/solve/solve.snake.c
${LIB42}/libsoft1/libalgo/solve/solve.sudoku.c
${LIB42}/libsoft1/libalgo/solve/solve.tetris.c
${LIB42}/libsoft1/libalgo/solve/solve.xiangqi.c
${LIB42}/libsoft1/libalgo/sorting/sort.bubble.c
${LIB42}/libsoft1/libalgo/sorting/sort.gnome.c
${LIB42}/libsoft1/libalgo/sorting/sort.heap.c
${LIB42}/libsoft1/libalgo/sorting/sort.insert.c
${LIB42}/libsoft1/libalgo/sorting/sort.merge.c
${LIB42}/libsoft1/libalgo/sorting/sort.quick.c
${LIB42}/libsoft1/libalgo/sorting/sort.select.c
${LIB42}/libsoft1/libalgo/transform/trfm.cosine.c
${LIB42}/libsoft1/libalgo/transform/trfm.fourier.c
${LIB42}/libsoft1/libalgo/transform/trfm.laplace.c
${LIB42}/libsoft1/libalgo/tree/tree.binary.c
${LIB42}/libsoft1/libalgo/tree/tree.redblack.c
${LIB42}/libsoft1/libalgo/tree/tree.bplus.c
${LIB42}/libsoft1/libchem/chem.equation.c
${LIB42}/libsoft1/libfile/certificate/cert.pem.c
${LIB42}/libsoft1/libfile/certificate/cert.x509.c
${LIB42}/libsoft1/libfile/codec/video/codec.h264.c
${LIB42}/libsoft1/libfile/compress/comp.7z.c
${LIB42}/libsoft1/libfile/compress/comp.cpio.c
${LIB42}/libsoft1/libfile/compress/comp.gz.c
${LIB42}/libsoft1/libfile/compress/comp.tar.c
${LIB42}/libsoft1/libfile/compress/comp.zip.c
${LIB42}/libsoft1/libfile/document/doc.doc.c
${LIB42}/libsoft1/libfile/document/doc.docx.c
${LIB42}/libsoft1/libfile/document/doc.latex.c
${LIB42}/libsoft1/libfile/document/doc.pdf.c
${LIB42}/libsoft1/libfile/document/doc.ppt.c
${LIB42}/libsoft1/libfile/document/doc.pptx.c
${LIB42}/libsoft1/libfile/document/doc.xls.c
${LIB42}/libsoft1/libfile/document/doc.xlsx.c
${LIB42}/libsoft1/libfile/electronic/allegro/allegro.brd.c
${LIB42}/libsoft1/libfile/electronic/allegro/allegro.dsn.c
${LIB42}/libsoft1/libfile/electronic/altium/altium.pcbdoc.c
${LIB42}/libsoft1/libfile/electronic/altium/altium.schdoc.c
${LIB42}/libsoft1/libfile/electronic/kicad/kicad.kicad_sch.c
${LIB42}/libsoft1/libfile/electronic/kicad/kicad.kicad_pcb.c
${LIB42}/libsoft1/libfile/executable/exec.elf.c
${LIB42}/libsoft1/libfile/executable/exec.macho.c
${LIB42}/libsoft1/libfile/executable/exec.pe.c
${LIB42}/libsoft1/libfile/filesystem/fs.ext.c
${LIB42}/libsoft1/libfile/filesystem/fs.fat.c
${LIB42}/libsoft1/libfile/filesystem/fs.hfs.c
${LIB42}/libsoft1/libfile/filesystem/fs.ntfs.c
${LIB42}/libsoft1/libfile/font/font.fon.c
${LIB42}/libsoft1/libfile/font/font.otf.c
${LIB42}/libsoft1/libfile/font/font.ttf.c
${LIB42}/libsoft1/libfile/model/model.3mf.c
${LIB42}/libsoft1/libfile/model/model.dwg.c
${LIB42}/libsoft1/libfile/model/model.stl.c
${LIB42}/libsoft1/libfile/parttable/pt.apple.c
${LIB42}/libsoft1/libfile/parttable/pt.gpt.c
${LIB42}/libsoft1/libfile/parttable/pt.mbr.c
${LIB42}/libsoft1/libfile/vdisk/disk.raw.c
${LIB42}/libsoft1/libfile/vdisk/disk.vhd.c
${LIB42}/libsoft1/libfile/vdisk/disk.vmdk.c
${LIB42}/libsoft1/libfile/media/audio/audio.ape.c
${LIB42}/libsoft1/libfile/media/audio/audio.mp3.c
${LIB42}/libsoft1/libfile/media/audio/audio.ogg.c
${LIB42}/libsoft1/libfile/media/audio/audio.wav.c
${LIB42}/libsoft1/libfile/media/audio/tone.drum.c
${LIB42}/libsoft1/libfile/media/audio/tone.flute.c
${LIB42}/libsoft1/libfile/media/audio/tone.piano.c
${LIB42}/libsoft1/libfile/media/audio/tone.violin.c
${LIB42}/libsoft1/libfile/media/picture/pic.bmp.c
${LIB42}/libsoft1/libfile/media/picture/pic.flif.c
${LIB42}/libsoft1/libfile/media/picture/pic.heif.c
${LIB42}/libsoft1/libfile/media/picture/pic.jpg.c
${LIB42}/libsoft1/libfile/media/picture/pic.png.c
${LIB42}/libsoft1/libfile/media/picanim/picanim.gif.c
${LIB42}/libsoft1/libfile/media/picanim/picanim.webp.c
${LIB42}/libsoft1/libfile/media/subtitle/subtitle.ass.c
${LIB42}/libsoft1/libfile/media/subtitle/subtitle.srt.c
${LIB42}/libsoft1/libfile/media/composite/media.avi.c
${LIB42}/libsoft1/libfile/media/composite/media.flv.c
${LIB42}/libsoft1/libfile/media/composite/media.mkv.c
${LIB42}/libsoft1/libfile/media/composite/media.mp4.c
${LIB42}/libsoft1/libfile/media/composite/media.rmvb.c
${LIB42}/libsoft1/libfile/filetype.c
${LIB42}/libsoft1/libfile/fileauto.c
${LIB42}/libsoft1/libfile/filemgr.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.only_g.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.only_ga.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.mahony.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.madgwick.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.ekf.c
${LIB42}/libsoft1/libflow/ahrs/ahrs.ukf.c
${LIB42}/libsoft1/libflow/file/stream.test.pump.c
${LIB42}/libsoft1/libflow/file/stream.test.stor.c
${LIB42}/libsoft1/libflow/html/stream.help.control.c
${LIB42}/libsoft1/libflow/html/stream.help.crawler.c
${LIB42}/libsoft1/libflow/html/stream.help.search.c
${LIB42}/libsoft1/libflow/html/stream.help.vt100.c
${LIB42}/libsoft1/libflow/image/image.img2pbr.c
${LIB42}/libsoft1/libflow/image/image.rotate.c
${LIB42}/libsoft1/libflow/image/image.scale.c
${LIB42}/libsoft1/libflow/image/image.picfmt.c
${LIB42}/libsoft1/libflow/stream/stream.conv.qu2eu.c
${LIB42}/libsoft1/libflow/stream/stream.conv.str2vec.c
${LIB42}/libsoft1/libflow/stream/stream.mux.easy.c
${LIB42}/libsoft1/libflow/stream/stream.mux.media.c
${LIB42}/libsoft1/libflow/stream/stream.parse.gcode.c
${LIB42}/libsoft1/libflow/stream/stream.parse.mavlink.c
${LIB42}/libsoft1/libflow/stream/stream.parse.nema0183.c
${LIB42}/libsoft1/libflow/stream/stream.revise.recut.c
${LIB42}/libsoft1/libflow/stream/stream.revise.reline.c
${LIB42}/libsoft1/libflow/stream/stream.revise.reorder.c
${LIB42}/libsoft1/libflow/stream/stream.test.echo.c
${LIB42}/libsoft1/libflow/stream/stream.test.goslow.c
${LIB42}/libsoft1/libflow/stream/stream.test.dbgf32.c
${LIB42}/libsoft1/libflow/stream/stream.test.dbghex.c
${LIB42}/libsoft1/libflow/stream/stream.test.fftpcm.c
${LIB42}/libsoft1/libflow/stream/stream.test.fftrgb.c
${LIB42}/libsoft1/libmath/libmath.bigint.c
${LIB42}/libsoft1/libmath/libmath.matrix.c
${LIB42}/libsoft1/libmath/libmath.notation.c
${LIB42}/libsoft1/libmath/libmath.prime.c
${LIB42}/libsoft1/libmath/libmath.rotation.c
${LIB42}/libsoft1/libmath/libmath.vector.c
${LIB42}/libsoft1/libmath/libmath.triangle.c
${LIB42}/libsoft1/libnet/0.phy/phy.bt.c
${LIB42}/libsoft1/libnet/0.phy/phy.eth.c
${LIB42}/libsoft1/libnet/0.phy/phy.raw.c
${LIB42}/libsoft1/libnet/0.phy/phy.wlan.c
${LIB42}/libsoft1/libnet/1.link/link.arp.c
${LIB42}/libsoft1/libnet/1.link/link.pppoe.c
${LIB42}/libsoft1/libnet/1.link/link.slip.c
${LIB42}/libsoft1/libnet/2.net/net.icmpv4.c
${LIB42}/libsoft1/libnet/2.net/net.ipv4.c
${LIB42}/libsoft1/libnet/2.net/net.ipx.c
${LIB42}/libsoft1/libnet/3.tran/tran.udp.c
${LIB42}/libsoft1/libnet/3.tran/tran.tcp.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.bootp.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.dhcp.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.dns.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.ntp.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.quic.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.tftp.c
${LIB42}/libsoft1/libnet/4.use/udp/udp.trav.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.dl.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.ftp.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.fuckgfw.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.party.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.proxy.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.rdp.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.rtmp.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.sql.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.socks.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.ssh.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.telnet.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.tls1_2.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.tls1_3.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.trav.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.vnc.c
${LIB42}/libsoft1/libnet/4.use/tcp/tcp.ws.c
${LIB42}/libsoft1/libnet/4.use/any/http1.c
${LIB42}/libsoft1/libnet/4.use/any/http2.c
${LIB42}/libsoft1/libnet/4.use/any/http3.c
${LIB42}/libsoft1/libphys/phys.elec.c
${LIB42}/libsoft1/libphys/phys.mech.c
${LIB42}/libsoft1/libphys/phys.rigid.c
${LIB42}/libsoft1/libphys/phys.fluid.c
${LIB42}/libsoft1/artery.c
)
set(libuser0
${LIB42}/libuser0/2d-window/os-android/android.gles.c
${LIB42}/libuser0/2d-camera/os-android/android.cam.c
${LIB42}/libuser0/3d-output/render-gl/gldraw/gl.none.c
${LIB42}/libuser0/3d-output/render-gl/gldraw/gl.easy.c
${LIB42}/libuser0/3d-output/render-gl/gldraw/gl.full.c
${LIB42}/libuser0/3d-output/render-gl/gldraw/gl.cmdq.c
${LIB42}/libuser0/3d-output/render-gl/gltar/gl41.target.color.c
${LIB42}/libuser0/3d-output/render-gl/gltar/gl41.target.cube.c
${LIB42}/libuser0/3d-output/render-gl/gltar/gl41.target.depth.c
${LIB42}/libuser0/3d-output/render-gl/gltar/gl41.target.gbuffer.c
${LIB42}/libuser0/3d-output/render-gl/globj/globj.fbo.c
${LIB42}/libuser0/3d-output/render-gl/globj/globj.shader.c
${LIB42}/libuser0/3d-output/render-gl/globj/globj.texture.c
${LIB42}/libuser0/3d-output/render-gl/globj/globj.varray.c
${LIB42}/libuser0/3d-output/render-gl/globj/globj.vertex.c
${LIB42}/libuser0/control-gamepad/android/android.gamepad.c
${LIB42}/libuser0/control-systray/android/android.tray.c
${LIB42}/libuser0/control-cmdline/android/android.stdio.c
${LIB42}/libuser0/sound-micphone/os-android/android.mic.c
${LIB42}/libuser0/sound-speaker/os-android/android.speaker.c
${LIB42}/libuser0/gadget-sensor/sensor.ahrs.c
${LIB42}/libuser0/gadget-sensor/sensor.slam.c
${LIB42}/libuser0/gadget-sensor/sensor.lidar.c
${LIB42}/libuser0/gadget-sensor/sensor.radar.c
${LIB42}/libuser0/gadget-display/1602/gadget.1602.c
${LIB42}/libuser0/gadget-display/12864/gadget.12864.c
${LIB42}/libuser0/supply.c
)
set(libuser1
${LIB42}/libuser1/codething/forcpu/3d-carve/carve.point.c
${LIB42}/libuser1/codething/forcpu/3d-carve/carve.line.c
${LIB42}/libuser1/codething/forcpu/3d-carve/carve.trigon.c
${LIB42}/libuser1/codething/forcpu/3d-carve/carve.voxel.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.opaque.point.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.opaque.line.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.opaque.trigon.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.solid.point.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.solid.line.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.solid.trigon.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.text.ascii.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.text.unicode.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.other.circuit.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.other.group.c
${LIB42}/libuser1/codething/forcpu/3d-carve/gl41.other.helper.c
${LIB42}/libuser1/codething/forcpu/2d-draw/tui/tui.c
${LIB42}/libuser1/codething/forcpu/2d-draw/hsl/hsl.c
${LIB42}/libuser1/codething/forcpu/2d-draw/yuv/yuv.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.line.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.solid.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.shape.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.ascii.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.utf8.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/draw.vt100.c
${LIB42}/libuser1/codething/forcpu/2d-draw/rgba/rgba.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.blur.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.channel.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.convert.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.gray.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.mosaic.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.rotate.c
${LIB42}/libuser1/codething/forcpu/2d-photo/photo.scale.c
${LIB42}/libuser1/codething/forcpu/3to2-raster/raster.c
${LIB42}/libuser1/codething/forcpu/3to2-raytrace/raytrace.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.local2world.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.world2view.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.view2clip.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.clip2ndc.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.ndc2uv.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.uv2xy.c
${LIB42}/libuser1/codething/forcpu/matrix/mat.3d.c
${LIB42}/libuser1/codething/forcpu/intersect/intersect.obb.c
${LIB42}/libuser1/codething/forcpu/intersect/intersect.ray.c
${LIB42}/libuser1/codething/forcpu/intersect/intersect.rect.c
${LIB42}/libuser1/codething/forcpu/intersect/intersect.sphere.c
${LIB42}/libuser1/codething/forcpu/forcpu.c
${LIB42}/libuser1/codething/forgpu/dx11/dx11.ctx.c
${LIB42}/libuser1/codething/forgpu/gl41/gl41.data.c
${LIB42}/libuser1/codething/forgpu/gl41/gl41.mode.cmdq.c
${LIB42}/libuser1/codething/forgpu/gl41/gl41.mode.list.c
${LIB42}/libuser1/codething/forgpu/metal/metal.ctx.c
${LIB42}/libuser1/codething/fornpu/npu.c
${LIB42}/libuser1/codething/forspu/al10/al10.c
${LIB42}/libuser1/codething/forspu/sl10/sl10.c
${LIB42}/libuser1/codething/forspu/spu.pcm.c
${LIB42}/libuser1/codething/formem/elec/asset.circuit.c
${LIB42}/libuser1/codething/formem/func/asset.function.c
${LIB42}/libuser1/codething/formem/html/asset.html.c
${LIB42}/libuser1/codething/formem/html/html.help.c
${LIB42}/libuser1/codething/formem/json/json.c
${LIB42}/libuser1/codething/formem/latex/latex.c
${LIB42}/libuser1/codething/formem/image/asset.image.c
${LIB42}/libuser1/codething/formem/model/asset.model.c
${LIB42}/libuser1/codething/formem/sound/asset.sound.c
${LIB42}/libuser1/codething/formem/xml/xml.c
${LIB42}/libuser1/codething/formem/zimu/zimu.c
${LIB42}/libuser1/codething/formem/formem.c
${LIB42}/libuser1/codething/syncout/bionic/robot-arm.c
${LIB42}/libuser1/codething/syncout/bionic/robot-dog.c
${LIB42}/libuser1/codething/syncout/bionic/robot-man.c
${LIB42}/libuser1/codething/syncout/bionic/robot-snake.c
${LIB42}/libuser1/codething/syncout/copter/copter-hexa.c
${LIB42}/libuser1/codething/syncout/copter/copter-octo.c
${LIB42}/libuser1/codething/syncout/copter/copter-quad.c
${LIB42}/libuser1/codething/syncout/factory/3d-printer.c
${LIB42}/libuser1/codething/syncout/factory/3d-router.c
${LIB42}/libuser1/codething/syncout/vehicle/car-bldc.c
${LIB42}/libuser1/codething/syncout/vehicle/car-step.c
${LIB42}/libuser1/codething/syncout/vehicle/car-toy.c
${LIB42}/libuser1/codething/elec/bldc/control.bldc.c
${LIB42}/libuser1/codething/elec/bulk/control.bulk.c
${LIB42}/libuser1/codething/event/evcam/evcam.1rd.c
${LIB42}/libuser1/codething/event/evcam/evcam.3rd.c
${LIB42}/libuser1/codething/event/evcam/evcam.free.c
${LIB42}/libuser1/codething/event/evcam/evcam.frus.c
${LIB42}/libuser1/codething/event/evcam/evcam.rts.c
${LIB42}/libuser1/codething/event/evpick/evpick.area.c
${LIB42}/libuser1/codething/event/evpick/evpick.ray.c
${LIB42}/libuser1/codething/event/evtouch/evtouch.movecam.c
${LIB42}/libuser1/codething/event/evtouch/evtouch.moveobj.c
${LIB42}/libuser1/codething/sense/sense.virtimu.c
${LIB42}/libuser1/codething/sense/sense.temp.c
${LIB42}/libuser1/codething/pilot/drone/pilot.drone.c
${LIB42}/libuser1/codething/pilot/vehicle/pilot.vehicle.c
${LIB42}/libuser1/codething/pilot/follow/pilot.follow.c
${LIB42}/libuser1/codething/pilot/lookat/pilot.lookat.c
${LIB42}/libuser1/codething/pilot/wander/pilot.wander.c
${LIB42}/libuser1/codething/place/maze/solve.maze.c
${LIB42}/libuser1/codething/place/rubik/solve.rubik.c
${LIB42}/libuser1/codething/user/baby/baby.c
${LIB42}/libuser1/codething/user/gary/gary.c
${LIB42}/libuser1/codething/user/john/john.c
${LIB42}/libuser1/codething/user/kali/kali.c
${LIB42}/libuser1/codething/user/kirk/kirk.c
${LIB42}/libuser1/codething/user/lara/lara.c
${LIB42}/libuser1/codething/user/lily/lily.c
${LIB42}/libuser1/codething/user/musk/musk.c
${LIB42}/libuser1/codething/user/rose/rose.c
${LIB42}/libuser1/codething/user/yoda/yoda.c
${LIB42}/libuser1/codething/mind.c
${LIB42}/libuser1/codeworld/gameplay/interact/play.interact.c
${LIB42}/libuser1/codeworld/gameplay/mission/play.mission.c
${LIB42}/libuser1/codeworld/simulate/collide/collide.simple.c
${LIB42}/libuser1/codeworld/simulate/gravity/gravity.easy.c
${LIB42}/libuser1/codeworld/simulate/gravity/gravity.test.c
${LIB42}/libuser1/codeworld/simulate/biosimu/bio.evolution.c
${LIB42}/libuser1/codeworld/simulate/biosimu/bio.multiply.c
${LIB42}/libuser1/codeworld/simulate/biosimu/bio.plague.c
${LIB42}/libuser1/codeworld/simulate/progsimu/vm.mmio.c
${LIB42}/libuser1/codeworld/simulate/progsimu/vm.port.c
${LIB42}/libuser1/codeworld/simulate/schesimu/ee.analog.c
${LIB42}/libuser1/codeworld/simulate/schesimu/ee.digital.c
${LIB42}/libuser1/codeworld/simulate/wiresimu/wiresimu.c
${LIB42}/libuser1/codeworld/rule.c
${LIB42}/libuser1/datathing/capture/cam/cam.free.c
${LIB42}/libuser1/datathing/capture/cam/cam.ortho.c
${LIB42}/libuser1/datathing/capture/cam/cam.vrbox.c
${LIB42}/libuser1/datathing/capture/cam/cam.vrglass.c
${LIB42}/libuser1/datathing/capture/mic/mic.mono.c
${LIB42}/libuser1/datathing/capture/mic/mic.stereo.c
${LIB42}/libuser1/datathing/special/file/file.model.scad.c
${LIB42}/libuser1/datathing/special/file/file.model.geometry.c
${LIB42}/libuser1/datathing/special/file/file.program.mips64.c
${LIB42}/libuser1/datathing/special/file/file.program.arm64.c
${LIB42}/libuser1/datathing/special/file/file.program.x86_64.c
${LIB42}/libuser1/datathing/special/file/file.biology.fasta.c
${LIB42}/libuser1/datathing/special/file/file.biology.dna.c
${LIB42}/libuser1/datathing/special/file/file.model.obj.c
${LIB42}/libuser1/datathing/special/file/file.model.stl.c
${LIB42}/libuser1/datathing/special/file/file.model.wrl.c
${LIB42}/libuser1/datathing/special/onlycam/pull/fbo.cbuf.c
${LIB42}/libuser1/datathing/special/onlycam/pull/fbo.gbuf.c
${LIB42}/libuser1/datathing/special/onlycam/push/fbo.mirror.c
${LIB42}/libuser1/datathing/special/onlycam/push/fbo.portal.c
${LIB42}/libuser1/datathing/special/onlycam/push/fbo.water.c
${LIB42}/libuser1/datathing/special/onlycam/push/fbo.glass.c
${LIB42}/libuser1/datathing/special/onlycam/light/light.direction.c
${LIB42}/libuser1/datathing/special/onlycam/light/light.imagebased.c
${LIB42}/libuser1/datathing/special/onlycam/light/light.point.c
${LIB42}/libuser1/datathing/special/onlycam/light/light.projector.c
${LIB42}/libuser1/datathing/special/onlycam/light/light.spot.c
${LIB42}/libuser1/datathing/game/2048/game.2048.c
${LIB42}/libuser1/datathing/game/gobang/game.gobang.c
${LIB42}/libuser1/datathing/game/poker/poker.c
${LIB42}/libuser1/datathing/game/puzzle/game.puzzle.c
${LIB42}/libuser1/datathing/game/tetris/game.tetris.c
${LIB42}/libuser1/datathing/game/krieg/game.krieg.c
${LIB42}/libuser1/datathing/game/weiqi/game.weiqi.c
${LIB42}/libuser1/datathing/game/sudoku/game.sudoku.c
${LIB42}/libuser1/datathing/game/maze/game.maze.c
${LIB42}/libuser1/datathing/game/brick/game.brick.c
${LIB42}/libuser1/datathing/game/mahjong/mahjong.c
${LIB42}/libuser1/datathing/game/rubik/game.rubik.c
${LIB42}/libuser1/datathing/game/chess/game.chess.c
${LIB42}/libuser1/datathing/game/ooxx/game.ooxx.c
${LIB42}/libuser1/datathing/game/pegged/game.pegged.c
${LIB42}/libuser1/datathing/game/xiangqi/game.xiangqi.c
${LIB42}/libuser1/datathing/game/snake/game.snake.c
${LIB42}/libuser1/datathing/game/sokoban/game.sokoban.c
${LIB42}/libuser1/datathing/game/klotski/game.klotski.c
${LIB42}/libuser1/datathing/reallife/animal/animal.dog.c
${LIB42}/libuser1/datathing/reallife/animal/animal.human.c
${LIB42}/libuser1/datathing/reallife/animal/animal.spider.c
${LIB42}/libuser1/datathing/reallife/funland/item.ferris.c
${LIB42}/libuser1/datathing/reallife/funland/item.roller.c
${LIB42}/libuser1/datathing/reallife/galaxy/item.planet.c
${LIB42}/libuser1/datathing/reallife/galaxy/item.satellite.c
${LIB42}/libuser1/datathing/reallife/gear/gear.hypoid.c
${LIB42}/libuser1/datathing/reallife/gear/gear.worm.c
${LIB42}/libuser1/datathing/reallife/gear/gear.helical.c
${LIB42}/libuser1/datathing/reallife/gear/gear.spur.c
${LIB42}/libuser1/datathing/reallife/gear/gear.bevel.c
${LIB42}/libuser1/datathing/reallife/home/real.screen.c
${LIB42}/libuser1/datathing/reallife/home/item.piano.c
${LIB42}/libuser1/datathing/reallife/home/dxgl.curtain.c
${LIB42}/libuser1/datathing/reallife/home/item.clock.c
${LIB42}/libuser1/datathing/reallife/home/item.house.c
${LIB42}/libuser1/datathing/reallife/home/real.speaker.c
${LIB42}/libuser1/datathing/reallife/mechan/item.spring.c
${LIB42}/libuser1/datathing/reallife/mechan/item.motor.c
${LIB42}/libuser1/datathing/reallife/mechan/item.stick.c
${LIB42}/libuser1/datathing/reallife/move/move.ladder.c
${LIB42}/libuser1/datathing/reallife/move/move.stair.c
${LIB42}/libuser1/datathing/reallife/move/move.elevator.c
${LIB42}/libuser1/datathing/reallife/move/move.telpher.c
${LIB42}/libuser1/datathing/reallife/organ/real.theeye.c
${LIB42}/libuser1/datathing/reallife/organ/real.theear.c
${LIB42}/libuser1/datathing/reallife/plant/item.tree.c
${LIB42}/libuser1/datathing/reallife/plant/item.grass.c
${LIB42}/libuser1/datathing/reallife/plant/item.flower.c
${LIB42}/libuser1/datathing/reallife/reducer/redu.harmonic.c
${LIB42}/libuser1/datathing/reallife/reducer/redu.cycloid.c
${LIB42}/libuser1/datathing/reallife/reducer/redu.planetary.c
${LIB42}/libuser1/datathing/reallife/robot/robo.dancemat.c
${LIB42}/libuser1/datathing/reallife/robot/robo.otto.c
${LIB42}/libuser1/datathing/reallife/robot/robo.balance.c
${LIB42}/libuser1/datathing/reallife/robot/robo.rccar.c
${LIB42}/libuser1/datathing/reallife/robot/robo.drone.c
${LIB42}/libuser1/datathing/subject/elec/analog/dcdc/dcdc.bulk.c
${LIB42}/libuser1/datathing/subject/elec/analog/dcdc/dcdc.boost.c
${LIB42}/libuser1/datathing/subject/elec/analog/radio/radio.am.c
${LIB42}/libuser1/datathing/subject/elec/analog/radio/radio.fm.c
${LIB42}/libuser1/datathing/subject/elec/analog/acdc/acdc.rectifier.c
${LIB42}/libuser1/datathing/subject/elec/analog/energy/energy.battery.c
${LIB42}/libuser1/datathing/subject/elec/analog/energy/energy.current.c
${LIB42}/libuser1/datathing/subject/elec/analog/energy/energy.voltage.c
${LIB42}/libuser1/datathing/subject/elec/analog/dcac/acdc.hbridge.c
${LIB42}/libuser1/datathing/subject/elec/analog/acac/acac.transform.c
${LIB42}/libuser1/datathing/subject/elec/semi/transis/chip.transistor.mosfet.c
${LIB42}/libuser1/datathing/subject/elec/semi/transis/chip.transistor.finfet.c
${LIB42}/libuser1/datathing/subject/elec/semi/transis/chip.transistor.bjt.c
${LIB42}/libuser1/datathing/subject/elec/semi/transis/chip.transistor.gaafet.c
${LIB42}/libuser1/datathing/subject/elec/semi/diode/chip.diode.zener.c
${LIB42}/libuser1/datathing/subject/elec/semi/diode/chip.diode.emitting.c
${LIB42}/libuser1/datathing/subject/elec/semi/diode/chip.diode.schottky.c
${LIB42}/libuser1/datathing/subject/elec/common/common.inductor.c
${LIB42}/libuser1/datathing/subject/elec/common/common.memristor.c
${LIB42}/libuser1/datathing/subject/elec/common/common.capacitor.c
${LIB42}/libuser1/datathing/subject/elec/common/common.resistor.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ff/chip.flipflop.tff.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ff/chip.flipflop.jkff.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ff/chip.flipflop.dff.c
${LIB42}/libuser1/datathing/subject/elec/cmos/oper-add/chip.adder.half.c
${LIB42}/libuser1/datathing/subject/elec/cmos/oper-add/chip.adder.full.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-trans/chip.tran.tristate.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-trans/chip.tran.tg.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-trans/chip.tran.mux.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ram/chip.ram.static.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ram/chip.ram.feedback.c
${LIB42}/libuser1/datathing/subject/elec/cmos/stor-ram/chip.ram.dynamic.c
${LIB42}/libuser1/datathing/subject/elec/cmos/chip.fet.pmos.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.not.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.and.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.xor.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.nor.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.nand.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.or.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.xnor.c
${LIB42}/libuser1/datathing/subject/elec/cmos/gate-logic/chip.logic.autocmos.c
${LIB42}/libuser1/datathing/subject/elec/cmos/chip.fet.nmos.c
${LIB42}/libuser1/datathing/subject/topo/item.klein.c
${LIB42}/libuser1/datathing/subject/topo/item.mobius.c
${LIB42}/libuser1/datathing/subject/algo/algo.bintree.c
${LIB42}/libuser1/datathing/subject/algo/algo.algo.c
${LIB42}/libuser1/datathing/subject/algo/algo.mnist.c
${LIB42}/libuser1/datathing/subject/algo/algo.link.c
${LIB42}/libuser1/datathing/subject/algo/algo.sort.c
${LIB42}/libuser1/datathing/subject/algo/algo.graph.c
${LIB42}/libuser1/datathing/subject/algo/algo.bplus.c
${LIB42}/libuser1/datathing/subject/code/code.call.c
${LIB42}/libuser1/datathing/subject/code/code.for.c
${LIB42}/libuser1/datathing/subject/code/code.if.c
${LIB42}/libuser1/datathing/subject/code/code.jump.c
${LIB42}/libuser1/datathing/subject/html/html.audio.c
${LIB42}/libuser1/datathing/subject/html/html.p.c
${LIB42}/libuser1/datathing/subject/html/html.button.c
${LIB42}/libuser1/datathing/subject/html/html.ul.c
${LIB42}/libuser1/datathing/subject/html/html.img.c
${LIB42}/libuser1/datathing/subject/html/html.a.c
${LIB42}/libuser1/datathing/subject/html/html.canvas.c
${LIB42}/libuser1/datathing/subject/html/html.div.c
${LIB42}/libuser1/datathing/subject/html/html.script.c
${LIB42}/libuser1/datathing/subject/html/html.video.c
${LIB42}/libuser1/datathing/subject/math/math.muldiv.c
${LIB42}/libuser1/datathing/subject/math/math.exponent.c
${LIB42}/libuser1/datathing/subject/math/math.vector.c
${LIB42}/libuser1/datathing/subject/math/math.integral.c
${LIB42}/libuser1/datathing/subject/math/math.matrix.c
${LIB42}/libuser1/datathing/subject/math/math.differential.c
${LIB42}/libuser1/datathing/subject/math/math.sincos.c
${LIB42}/libuser1/datathing/subject/math/math.addsub.c
${LIB42}/libuser1/datathing/subject/phys/phys.hydrogen.c
${LIB42}/libuser1/datathing/subject/phys/phys.carbon.c
${LIB42}/libuser1/datathing/subject/phys/phys.oxygen.c
${LIB42}/libuser1/datathing/subject/chem/chem.graphene.c
${LIB42}/libuser1/datathing/subject/chem/chem.h2o.c
${LIB42}/libuser1/datathing/subject/chem/chem.ch4.c
${LIB42}/libuser1/datathing/subject/chem/chem.diamond.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.skill.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.health.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.tag.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.tab.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.nav.c
${LIB42}/libuser1/datathing/uiuxitem/bar/bar.list.c
${LIB42}/libuser1/datathing/uiuxitem/debug/uiux.layouter.c
${LIB42}/libuser1/datathing/uiuxitem/debug/uiux.cameraer.c
${LIB42}/libuser1/datathing/uiuxitem/debug/uiux.pointer.c
${LIB42}/libuser1/datathing/uiuxitem/editor/edit.hex.c
${LIB42}/libuser1/datathing/uiuxitem/editor/edit.mmio.c
${LIB42}/libuser1/datathing/uiuxitem/editor/edit.text.c
${LIB42}/libuser1/datathing/uiuxitem/editor/edit.code.c
${LIB42}/libuser1/datathing/uiuxitem/menu/menu.login.c
${LIB42}/libuser1/datathing/uiuxitem/menu/menu.confirm.c
${LIB42}/libuser1/datathing/uiuxitem/menu/menu.esc.c
${LIB42}/libuser1/datathing/uiuxitem/menu/menu.start.c
${LIB42}/libuser1/datathing/uiuxitem/rtsui/rtsui.minimap.c
${LIB42}/libuser1/datathing/uiuxitem/rtsui/rtsui.status.c
${LIB42}/libuser1/datathing/uiuxitem/rtsui/rtsui.skill.c
${LIB42}/libuser1/datathing/uiuxitem/table/tab.karnaugh.c
${LIB42}/libuser1/datathing/uiuxitem/table/tab.truth.c
${LIB42}/libuser1/datathing/uiuxitem/widget/uiux.picture.c
${LIB42}/libuser1/datathing/uiuxitem/widget/vkbd.button.c
${LIB42}/libuser1/datathing/uiuxitem/widget/uiux.qrcode.c
${LIB42}/libuser1/datathing/uiuxitem/widget/vkbd.slider.c
${LIB42}/libuser1/datathing/uiuxitem/widget/vkbd.joystick.c
${LIB42}/libuser1/datathing/uiuxitem/widget/vkbd.keyboard.c
${LIB42}/libuser1/datathing/virtimag/dxgl/dxgl.field.c
${LIB42}/libuser1/datathing/virtimag/dxgl/dxgl.particle.c
${LIB42}/libuser1/datathing/virtimag/dxgl/dxgl.weather.c
${LIB42}/libuser1/datathing/virtimag/gnd/dxgl.ground.c
${LIB42}/libuser1/datathing/virtimag/gnd/dxgl.terrain.c
${LIB42}/libuser1/datathing/virtimag/sky/sky.box.c
${LIB42}/libuser1/datathing/virtimag/sky/sky.dome.c
${LIB42}/libuser1/datathing/virtimag/sky/sky.equiangu.c
${LIB42}/libuser1/datathing/virtimag/sky/sky.equirect.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.calculator.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.browser.c
${LIB42}/libuser1/datathing/virtimag/tool/menu.detail.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.sketchpad.c
${LIB42}/libuser1/datathing/virtimag/tool/uiux.voxel.c
${LIB42}/libuser1/datathing/virtimag/tool/uiux.texmix.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.pwmtool.c
${LIB42}/libuser1/datathing/virtimag/tool/uiux.spectrum.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.filesystem.c
${LIB42}/libuser1/datathing/virtimag/tool/uiux.video.c
${LIB42}/libuser1/datathing/virtimag/tool/menu.overview.c
${LIB42}/libuser1/datathing/virtimag/tool/tool.wireshark.c
${LIB42}/libuser1/datathing/virtimag/tool/uiux.oscillo.c
${LIB42}/libuser1/datathing/virtimag/item.tardis.c
${LIB42}/libuser1/datathing/virtimag/item.mario.c
${LIB42}/libuser1/datathing/thing.c
${LIB42}/libuser1/dataworld/2d/wndtest.naked.c
${LIB42}/libuser1/dataworld/2d/wndtest.titled.c
${LIB42}/libuser1/dataworld/2d/wndtest.corner.c
${LIB42}/libuser1/dataworld/3d/virtual.c
${LIB42}/libuser1/dataworld/3d/scene.c
${LIB42}/libuser1/dataworld/3d/uiux.axis.c
${LIB42}/libuser1/dataworld/3d/uiux.guide.c
${LIB42}/libuser1/dataworld/3d/uiux.border2d.c
${LIB42}/libuser1/dataworld/3d/uiux.border3d.c
${LIB42}/libuser1/dataworld/chemic/chem.burning.c
${LIB42}/libuser1/dataworld/chemic/chem.corrode.c
${LIB42}/libuser1/dataworld/electric/schematic/circ.sch.c
${LIB42}/libuser1/dataworld/electric/printboard/circ.pcb.c
${LIB42}/libuser1/dataworld/electric/pcbfac/fac.gerber.c
${LIB42}/libuser1/dataworld/mechanic/produce/fac.gcode.c
${LIB42}/libuser1/dataworld/physic/phy.field.c
${LIB42}/libuser1/dataworld/physic/phy.fluid.c
${LIB42}/libuser1/dataworld/physic/phy.force.c
${LIB42}/libuser1/dataworld/neural/nn.cnn.c
${LIB42}/libuser1/dataworld/neural/nn.rnn.c
${LIB42}/libuser1/dataworld/uispace/ui.html.c
${LIB42}/libuser1/dataworld/uispace/ui.xaml.c
${LIB42}/libuser1/dataworld/world.c
${LIB42}/libuser1/testthing/example/test.calib3d.c
${LIB42}/libuser1/testthing/example/test.codeimg.c
${LIB42}/libuser1/testthing/example/test.doodle.c
${LIB42}/libuser1/testthing/example/test.example.c
${LIB42}/libuser1/testthing/example/test.font.c
${LIB42}/libuser1/testthing/example/test.fractal.c
${LIB42}/libuser1/testthing/example/test.palette.c
${LIB42}/libuser1/testthing/example/test.c
${LIB42}/libuser1/testthing/term/tool.terminal.c
${LIB42}/libuser1/testthing/term/tool.terminal.helper.c
${LIB42}/libuser1/testworld/testworld.c
${LIB42}/libuser1/vmhwthing/cpu/vmhw.cpu.x8664.c
${LIB42}/libuser1/vmhwthing/cpu/vmhw.cpu.arm64.c
${LIB42}/libuser1/vmhwthing/gpu/vmhw.gpu.c
${LIB42}/libuser1/vmhwthing/ram/vmhw.sram.c
${LIB42}/libuser1/vmhwthing/ram/vmhw.dram.c
${LIB42}/libuser1/vmhwthing/rpi/vmhw.rpi.uart.c
${LIB42}/libuser1/vmhwthing/rpi/vmhw.rpi.gpio.c
${LIB42}/libuser1/vmhwworld/vmhwworld.c
${LIB42}/libuser1/entity.c
)
add_library(native-activity SHARED
${libboot0}
${libboot1}
${libhard0}
${libhard1}
${libsoft0}
${libsoft1}
${libuser0}
${libuser1}
)

target_include_directories(native-activity PRIVATE
${ANDROID_NDK}/sources/android/native_app_glue
${LIB42}
)

# add lib dependencies
target_link_libraries(native-activity
    android
    native_app_glue
    EGL
    GLESv3
    log)
